--- a/DesignPatternsASP/appsettings.json
+++ b/DesignPatternsASP/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MyConfig": {
+    "PathLog":  "log2.txt"
+  }
 }
