feat: depency injection dp practice

--- a/DesignPatternsASP/appsettings.json
+++ b/DesignPatternsASP/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "MyConfig": {
-    "PathLog":  "log2.txt"
+    "PathLog": "log2.txt",
+    "LocalEarnFactory": 0.20,
+    "ForeignEarnFactory": 0.35,
+    "Extra": 55
   }
 }
