feat: DP Repository

--- a/DesignPatternsASP/appsettings.json
+++ b/DesignPatternsASP/appsettings.json
@@ -11,5 +11,8 @@
     "LocalEarnFactory": 0.20,
     "ForeignEarnFactory": 0.35,
     "Extra": 55
+  },
+  "ConnectionStrings": {
+    "Connection":  "Server=MSI//sqlexpress; Database=DesignPatternDB; Trusted_Connection=True;"
   }
 }
