--- a/DesignPatterns.Repository/DesignPatterns.Repository.csproj
+++ b/DesignPatterns.Repository/DesignPatterns.Repository.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -16,6 +16,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DesignPatterns.Models\DesignPatterns.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="UnitOfWork\" />
   </ItemGroup>
 
 </Project>
