feat: unit of work dp

--- a/DesignPatternsASP/appsettings.json
+++ b/DesignPatternsASP/appsettings.json
@@ -13,6 +13,6 @@
     "Extra": 55
   },
   "ConnectionStrings": {
-    "Connection":  "Server=MSI//sqlexpress; Database=DesignPatternDB; Trusted_Connection=True;"
+    "Connection": "Server=MSI\\SQLEXPRESS; Database=DesignPatternDB; Trusted_Connection=true; Trust Server Certificate=true;"
   }
 }
